[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "scipy>=1.9.3",
    "numpy>=1.24.3",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.1",
    "seaborn>=0.12.2",
    "pandas>=2.0.1",
    "ipywidgets>=8.0.6",
    "ipykernel>=6.23.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}
